--- a/tic-tac-toe/build.gradle
+++ b/tic-tac-toe/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'jacoco'
 apply plugin: 'application'
-
+apply plugin: 'checkstyle'
 
 mainClassName = 'tictactoe.Main'
 
@@ -13,13 +13,15 @@ dependencies {
     testCompile 'junit:junit:4.12'
 }
 
-apply plugin: 'jacoco'
-
 jacocoTestReport {
     reports {
         xml.enabled = true
         html.enabled = true
     }
+}
+
+checkstyle {
+    configFile rootProject.file('config/checkstyle/checkstyle.xml');
 }
 
 check.dependsOn jacocoTestReport
