--- a/tic-tac-toe/build.gradle
+++ b/tic-tac-toe/build.gradle
@@ -1,9 +1,9 @@
 plugins {
-  id 'java'
-  id 'jacoco'
-  id 'checkstyle'
-  id 'application'
-  id 'org.openjfx.javafxplugin' version '0.0.10'
+    id 'java'
+    id 'jacoco'
+    id 'checkstyle'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.10'
 }
 
 javafx {
@@ -18,10 +18,10 @@ repositories {
     mavenCentral()
 }
 
-
-
 dependencies {
-    testCompile 'junit:junit:4.12'
+    testCompile 'junit:junit:4.13'
+    testImplementation "junit:junit:4.13"
+    testImplementation "org.mockito:mockito-core:3.+"
 }
 
 jacocoTestReport {
