--- a/tic-tac-toe/build.gradle
+++ b/tic-tac-toe/build.gradle
@@ -29,6 +29,11 @@ jacocoTestReport {
         xml.enabled = true
         html.enabled = true
     }
+        afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+                    fileTree(dir: it, exclude: ['**/Main.class','**/ui/**'])
+                }))
+    }
 }
 
 checkstyle {
