--- a/tic-tac-toe/build.gradle
+++ b/tic-tac-toe/build.gradle
@@ -27,6 +27,15 @@ dependencies {
     compile 'net.bytebuddy:byte-buddy:1.10.13'
 }
 
+jar {
+    manifest {
+        attributes "Main-Class": "tictactoe.Main"
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
 task myJavadocs(type: Javadoc) {
     source = sourceSets.main.allJava
 }
