Increase logic test coverage

--- a/tic-tac-toe/build.gradle
+++ b/tic-tac-toe/build.gradle
@@ -41,7 +41,9 @@ task javadocs(type: Javadoc) {
 }
 
 test {
-    exclude '**/AIPerformanceTest.class'
+    exclude '**/ai/AIPerformanceTest.class',\
+            '**/ai/GameTreeNodePrunerTest.class',
+            '**/ai/TicTacToeNodeTest.class'
 }
 
 task performanceTest( type: Test ) {
